--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   },
   "require": {
     "symfony/form": "^3.2",
-    "symfony/templating": "^3.2",
-    "symfony/translation": "^3.2"
+    "symfony/templating": "^3.2"
   }
 }
 
