--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     }
   },
   "require": {
-    "symfony/form": "^3.2",
-    "symfony/templating": "^3.2"
+    "symfony/form": "^3.2 || ^4.0",
+    "symfony/templating": "^3.2 || ^4.0"
   }
 }
 
